fixed issues navbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -659,13 +659,13 @@ a.button:hover {
   border-bottom-color: var(--rainbow-3);
 }
 
-.navigation a.item.guia:hover,
-.navigation a.item.guia.active {
+.navigation a.item.projects:hover,
+.navigation a.item.projects.active {
   border-bottom-color: var(--rainbow-4);
 }
 
-.navigation a.item.fisica:hover,
-.navigation a.item.fisica.active {
+.navigation a.item.resume:hover,
+.navigation a.item.resume.active {
   border-bottom-color: var(--rainbow-5);
 }
 
