--- a/src/App.scss
+++ b/src/App.scss
@@ -1635,6 +1635,49 @@ p.text-medium {
   border-radius: 2px;
 }
 
+/* --------- */
+/* Projects */
+/* --------- */
+
+.project-section {
+  padding-top: 150px;
+  padding-bottom: 30px;
+  background-image: var(--section-background-color);
+}
+
+.project-name {
+  color: var(--rainbow-4);
+}
+
+.project-card {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 25px;
+  padding-right: 25px;
+  height: auto;
+}
+
+.project-card-view {
+  box-shadow: 0 4px 5px 3px var(--rainbow-4) !important;
+  color: white !important;
+  background-color: transparent !important;
+  opacity: 0.9 !important;
+  transition: all 0.5s ease 0s !important;
+  height: 100% !important;
+}
+.project-card-view:hover {
+  transform: scale(1.02) !important;
+  overflow: hidden !important;
+  box-shadow: 0 4px 4px 5px var(--rainbow-4) !important;
+}
+
+.project-card-view .card-img {
+  height: 200px;
+  width: 300px;
+  justify-content: center;
+  border-radius: 10px;
+}
+
 /* Contact */
 
 .contact {
