--- a/src/dark-mode.scss
+++ b/src/dark-mode.scss
@@ -185,4 +185,8 @@
     color: rgba($color: #999999, $alpha: 1.0) !important;
     border: 2px solid rgba($color: #999999, $alpha: 1.0) !important;
   }
+
+  .project-card-view .card-title {
+    color: var(--dark-font-color-heading);
+  }
 }
