added certificates in about section

--- a/src/dark-mode.scss
+++ b/src/dark-mode.scss
@@ -205,4 +205,9 @@
     border-right: 1px solid var(--dark-border-color);
     box-shadow: 5px 5px 5px var(--dark-border-color);
   }
+
+  .cert-card {
+    border: 1px solid var(--dark-border-color);
+    box-shadow: 5px 5px 5px var(--dark-border-color);
+  }
 }
