--- a/src/containers/About/About.scss
+++ b/src/containers/About/About.scss
@@ -41,6 +41,10 @@
   padding-bottom: 30px;
 }
 
+#about {
+  margin-bottom: 70px;
+}
+
 .wave {
   animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
   animation-duration: 2.1s; /* Change to speed up or slow down */
@@ -108,6 +112,9 @@
 }
 
 /* Education */
+#education {
+  margin-bottom: 100px;
+}
 
 .degree-card {
   display: flex;
@@ -248,5 +255,128 @@
 
   .card-subtitle {
     font-size: 16px;
+  }
+}
+
+/* Certificate */
+
+#skills {
+  margin-bottom: 80px;
+}
+
+.certs-body-div {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 300px;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 768px) {
+  .certs-body-div {
+    flex-direction: column;
+  }
+}
+
+.cert-card {
+  width: 30%;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: 1px solid var(--gray-3);
+  border-radius: 5px;
+  box-shadow: 5px 5px 5px var(--gray-3);
+  margin-bottom: 30px;
+}
+
+.cert-header {
+  margin: 0px;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.logo_img {
+  margin: auto;
+  width: auto;
+  height: 100px;
+}
+
+.cert-body {
+  margin: 0px;
+}
+
+.cert-body-title {
+  font-family: var(--font-family-heading);
+  font-size: 20px;
+  margin: 10px;
+}
+
+.content {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  overflow: hidden;
+}
+
+.content .content-overlay {
+  background: #59abf7b1;
+  position: absolute;
+  height: 99%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+
+.content:hover .content-overlay {
+  opacity: 1;
+}
+
+.content-details {
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.content:hover .content-details {
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
+
+.content-details h3 {
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.5em;
+  font-family: var(--font-family-heading);
+  text-transform: uppercase;
+}
+
+.fadeIn-top {
+  top: 20%;
+}
+
+@media (max-width: 1380px) {
+}
+
+@media (max-width: 768px) {
+  .cert-card {
+    width: 100%;
   }
 }
