--- a/src/containers/About/About.scss
+++ b/src/containers/About/About.scss
@@ -84,16 +84,21 @@
   justify-content: center;
 }
 
-@media (max-width: 767px) {
- .about-description {
-    display: block;
-  }
-}
-
 .about-img {
   height: 250px;
   width: 300px;
   margin-top: 80px;
+}
+
+@media (max-width: 767px) {
+ .about-description {
+    display: block;
+    margin-top: -40px;
+  }
+
+  .about-img {
+    margin: auto;
+  }
 }
 
 .about-description-text {
@@ -219,6 +224,7 @@
 @media (max-width: 768px) {
   .degree-card {
     flex-direction: column;
+    margin-top: 25px;
   }
 
   .body-header {
@@ -266,19 +272,13 @@
 
 .certs-body-div {
   display: flex;
-  justify-content: space-between;
-  margin: 0px 300px;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
-@media (max-width: 768px) {
-  .certs-body-div {
-    flex-direction: column;
-  }
-}
-
 .cert-card {
-  width: 30%;
+  width: 250px;
+  height: 180px;
   display: inline-block;
   justify-content: center;
   align-items: center;
@@ -287,7 +287,10 @@
   border-radius: 5px;
   box-shadow: 5px 5px 5px var(--gray-3);
   margin-bottom: 30px;
+  margin: auto;
 }
+
+
 
 .cert-header {
   margin: 0px;
@@ -370,13 +373,4 @@
 
 .fadeIn-top {
   top: 20%;
-}
-
-@media (max-width: 1380px) {
-}
-
-@media (max-width: 768px) {
-  .cert-card {
-    width: 100%;
-  }
 }
