--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -132,7 +132,7 @@
   .Typewriter__wrapper {
     font-size: 1.4em !important;
     font-weight: 500 !important;
-    position: relative !important;
+    position: fixed !important;
   }
   .Typewriter__cursor {
     display: none !important;
